# storm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
app/: CMakeLists.txt  main.cpp
cmake/: ClangFormat.cmake  CopyDllsForDebug.cmake  InstallCatch2.cmake  InstallDoctest.cmake  InstallFmt.cmake  InstallGLFW.cmake  InstallGSL.cmake  InstallPybind11.cmake  InstallSpdlog.cmake  LTO.cmake
opengl/: CMakeLists.txt  config.cppm  config.cppm.in  main.cpp  render.cppm  window.cppm
src/: CMakeLists.txt  config.h.in
src/core/: CMakeLists.txt  config.cppm  config.cppm.in
src/core/test/: CMakeLists.txt  test_config.cpp
test/: CMakeLists.txt
